--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "jade": "~1.11.0",
     "jsonwebtoken": "^7.2.1",
     "morgan": "~1.7.0",
+    "nodemailer": "^0.7.1",
+    "play": "^0.5.0",
+    "play-sound": "^1.1.1",
     "redis": "^2.6.3",
     "request-ip": "^1.2.3",
     "serve-favicon": "~2.3.0"
