--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ipware": "^1.0.0",
     "jade": "~1.11.0",
     "jsonwebtoken": "^7.2.1",
+    "mongoose": "^4.7.7",
     "morgan": "~1.7.0",
     "nodemailer": "^0.7.1",
     "play": "^0.5.0",
